--- a/frontend/.frontall/css/tailwind.css
+++ b/frontend/.frontall/css/tailwind.css
@@ -27,6 +27,16 @@ body {
     @apply w-48 h-48 fill-current;
 }
 
+.top-rounded{
+    border-radius: 44px 44px 0 0;
+}
+
+.rounded-t-right{
+    border-radius: 0 24px 0 0;
+}
+.rounded-t-left{
+    border-radius: 0 0 40px 0;
+}
 .bottom-rounded {
     border-radius: 0 0 68px 68px;
 }
@@ -52,8 +62,20 @@ body {
     height: auto;
 }
 
-.rounded-window{
+.window-rounded{
     border-radius: 28px;
+}
+.aps{
+    left: -102px;
+}
+.item-link{
+    margin-bottom: 10px;
+    color: #ffffff;
+    padding: 4px 4px 4px 10px;
+    border-color: slategray;
+    border-width: 2px;
+    border-radius: 10px;
+    text-transform: uppercase;
 }
 
 @tailwind utilities;
