--- a/frontend/.frontall/css/styles.css
+++ b/frontend/.frontall/css/styles.css
@@ -713,6 +713,21 @@ body {
   text-transform: uppercase;
 }
 
+.jsonColumn
+{
+  border:1px solid #777;
+  padding:2px 5px;
+  background: crimson;
+  color:#fff;
+  font-weight: 700;
+}
+
+.jsonCell
+{
+  border:1px solid #777;
+  padding:2px 5px;
+}
+
 .space-y-0 > :not(template) ~ :not(template) {
   --space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
