--- a/frontend/src/components/autocomplete/styles.css
+++ b/frontend/src/components/autocomplete/styles.css
@@ -1,12 +1,13 @@
 .react-autosuggest__container {
+    display: flex;
     position: relative;
-    top: 50px;
-    left: 50px;
-    width: 240px;
+    margin-right: 25px;
+
 }
 
 .react-autosuggest__input {
-    width: 240px;
+    display: flex;
+    width: 260px;
     height: 30px;
     padding: 10px 20px;
     font-family: Helvetica, sans-serif;
@@ -32,8 +33,8 @@
 .react-autosuggest__suggestions-container--open {
     display: block;
     position: absolute;
-    top: 51px;
-    width: 280px;
+    top: 40px;
+    width: 250px;
     border: 1px solid #aaa;
     background-color: #fff;
     font-family: Helvetica, sans-serif;
@@ -80,4 +81,14 @@
     right: 5px;
     width: 24px;
     height: 24px;
+}
+
+@media only screen and (max-width: 600px){
+    .react-autosuggest__input {
+        width: 140px;
+    }
+    .react-autosuggest__container {
+        margin-right: 0;
+        margin-left: 5px;
+    }
 }
