--- a/frontend/src/components/autocomplete/styles.css
+++ b/frontend/src/components/autocomplete/styles.css
@@ -1,7 +1,7 @@
 .react-autosuggest__container {
-    display: flex;
+    display: inline-flex;
     position: relative;
-    margin-right: 25px;
+    /*margin-right: 25px;*/
 
 }
 
