--- a/frontend/src/components/calendar/styles.css
+++ b/frontend/src/components/calendar/styles.css
@@ -1,6 +1,6 @@
 .react-datepicker {
     top:0;
-    left:12%;
+    /*left:10%;*/
 }
 
 .react-datepicker-wrapper{
@@ -9,14 +9,19 @@
 }
 
 .react-datepicker__input-container{
+    border: 1px solid gray;
+    border-radius: 5px;
     max-width: 200px;
+
 }
 
 .react-datepicker-ignore-onclickoutside{
     max-width: 200px;
+    padding: 0;
 }
 
 .react-datepicker__input-container > input{
-    max-width: 200px;
-    margin-left: 50px;
+    outline: none;
+    margin-left: 10px;
+    padding: 2px;
 }
