--- a/frontend/src/components/autocomplete/styles.css
+++ b/frontend/src/components/autocomplete/styles.css
@@ -7,14 +7,14 @@
 
 .react-autosuggest__input {
     display: flex;
-    width: 260px;
-    height: 30px;
-    padding: 10px 20px;
+
+    height: 27px;
+    padding: 5px 20px;
     font-family: Helvetica, sans-serif;
     font-weight: 300;
     font-size: 16px;
-    border: 1px solid #aaa;
-    border-radius: 4px;
+    border: 1px solid #555;
+    border-radius: 3px;
 }
 
 .react-autosuggest__input--focused {
